--- a/ChinoolSolution/WebApp/Site.Master
+++ b/ChinoolSolution/WebApp/Site.Master
@@ -83,7 +83,7 @@
 
                         </asp:MenuItem>
 
-                        <asp:MenuItem Text="Home" NavigateUrl="~/SamplePages/flitersearchCRUD.aspx">
+                        <asp:MenuItem Text="Sample" NavigateUrl="~/SamplePages/flitersearchCRUD.aspx">
 
                         </asp:MenuItem>
 
