--- a/ChinookSolution/WebApp/Site.Master
+++ b/ChinookSolution/WebApp/Site.Master
@@ -88,6 +88,9 @@
                                 <asp:MenuItem Text="Review CRUD"
                                      NavigateUrl="~/SamplePages/FilterSearchCRUD.aspx">
                                 </asp:MenuItem>
+                                 <asp:MenuItem Text="List View CRUD"
+                                     NavigateUrl="~/SamplePages/ListViewCRUDODS.aspx">
+                                </asp:MenuItem>
                             </asp:MenuItem>
                         </Items>
                     </asp:Menu>
